# japanese-local-cuisine-with-gemini

dataset/: README.md  pyproject.toml  scrapy.cfg
dataset/local_cuisine/: items.py  middlewares.py  pipelines.py  settings.py
dataset/local_cuisine/spiders/: cuisines_spider.py
dataset/src/dataset/: __init__.py
dataset/stubs/scrapy/: __init__.pyi  addons.pyi  cmdline.pyi  crawler.pyi  dupefilters.pyi  exceptions.pyi  exporters.pyi  item.pyi  link.pyi  logformatter.pyi  mail.pyi  middleware.pyi  pqueues.pyi  resolver.pyi  responsetypes.pyi  robotstxt.pyi  shell.pyi  signalmanager.pyi  signals.pyi  spiderloader.pyi  squeues.pyi  statscollectors.pyi
dataset/stubs/scrapy/commands/: __init__.pyi  bench.pyi  check.pyi  edit.pyi  fetch.pyi  genspider.pyi  list.pyi  parse.pyi  runspider.pyi  settings.pyi  shell.pyi  startproject.pyi  version.pyi
dataset/stubs/scrapy/contracts/: __init__.pyi  default.pyi
dataset/stubs/scrapy/core/: engine.pyi  scheduler.pyi  scraper.pyi  spidermw.pyi
dataset/stubs/scrapy/downloadermiddlewares/: ajaxcrawl.pyi  cookies.pyi  decompression.pyi  downloadtimeout.pyi  httpauth.pyi  httpcache.pyi  httpcompression.pyi  httpproxy.pyi  redirect.pyi  retry.pyi  robotstxt.pyi  stats.pyi  useragent.pyi
dataset/stubs/scrapy/extensions/: closespider.pyi  corestats.pyi  debug.pyi  feedexport.pyi  httpcache.pyi  logstats.pyi  memdebug.pyi  memusage.pyi  periodic_log.pyi  postprocessing.pyi  spiderstate.pyi  statsmailer.pyi  telnet.pyi  throttle.pyi
dataset/stubs/scrapy/http/: cookies.pyi  headers.pyi
dataset/stubs/scrapy/loader/: __init__.pyi  (+1 more)
(+74 files in other folders)
